08/09 U Updated FAQ file regarding bug #314                       [#314]
08/08 U Updated Spanish language file (es.l)                      [ #00]
08/07 U Updated GeoIP database file                               [ #00]
07/18 U Updated GeoIP database file                               [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
11/19 F Fixed inspircd11 not allowed to /stats                    [#448]
11/18 F Fixed parsing problem with multiple chan modes            [#426]
11/18 F Fixed several inspircd11 protocol properties              [ #00]
11/18 F Fixed many protocol message handlings for inspircd11      [#436]
11/18 F Fixed user/chan modes in inspircd11 protocol file         [ #00]
11/18 F Fixed denora not reporting version correctly to inspircd  [ #00]
11/18 F Fixed inspircd not catching ircd versions                 [ #00]
11/18 F Fixed wrong characters for aq prefixes for inspircd       [ #00]
11/18 F Fixed wrong user and chan modes in inspircd sql structure [ #00]
11/18 F Fixed Stats bot modes not set in sql                      [ #00]
11/17 F Fixed problem on user quits with some mysql servers       [#446]
11/14 F Fixed topic setter not handled correctly in asuka         [ #00]
11/12 F Fixed chanstats problems after removing user from exclude [#427]
11/12 F Help for CHANSTATS SET was wrong in italian lang file     [ #00]
11/12 F Fixed Asuka nick parser skipping some nicks               [#445]
11/12 F Fixed segfault on topic set in Asuka                      [#444]
11/11 F Fixed sjoin with more than two parameters going wrong     [#443]
10/07 F Fixed segfault in Asuka topic handling                    [#439]
09/12 F Fixed SQL structure error of ison table                   [ #00]
09/04 F Fixed SVSKILL not being handled                           [#421]
08/30 F Fixed SQL column for server uptime limiting to 97 days    [#428]
08/30 F Applied Trystan's signals patch                           [#429]