@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="117"
+VERSION_BUILD="118"
 
 # $Log$
+#
+# BUILD : 1.4.0.118 (SVN)
+# BUGS  : 447
+# NOTES : Fixed only first automode mode being set on the bot.
 #
 # BUILD : 1.4.0.117 (SVN)
 # BUGS  : 448
